--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 #form {
     margin: 20px;
     padding: 20px;
@@ -92,6 +93,7 @@ h1 {
     margin: 40px;
     background: rgb(68, 172, 68);
     height: 60vh;
+    justify-content: center;
 }
 
 #formLogin{
